# crypto-trader

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/ui/: App.tsx
frontend/src/ui/pages/: Backtest.tsx  Dashboard.tsx  Login.tsx  Orders.tsx  Portfolio.tsx  Settings.tsx
frontend/src/utils/: http.ts  realtime.ts  store.ts
scripts/: print_versions.py
src/crypto_trader/: cli.py
src/crypto_trader/api/: main.py  schemas.py  ws_manager.py
src/crypto_trader/api/routers/: backtest.py  config.py  market_data.py  orders.py  positions.py  strategies.py
src/crypto_trader/backtest/: engine.py
src/crypto_trader/core/: app.py  config.py  interfaces.py  logging.py  plugins.py
src/crypto_trader/data/: ccxt_client.py  db.py  models.py  utils.py
src/crypto_trader/execution/: paper.py
src/crypto_trader/live/: runner.py
src/crypto_trader/portfolio/: engine.py
src/crypto_trader/risk/: kelly_cap.py  model.py  vol_target.py
src/crypto_trader/strategies/: momo_vol.py
templates/configs/: example.yaml
tests/: test_backtest_engine.py  test_ccxt_client.py  test_cli.py  test_config.py  test_data_utils.py  test_live_runner_smoke.py  test_models_roundtrip.py  test_risk_model.py  test_strategy_momo_vol.py
