[tool.poetry]
name = "crypto-trader"
version = "0.1.0"
description = "Production-grade, low-latency crypto trading platform focusing on risk-adjusted returns."
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "crypto_trader", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
ccxt = "^4.3.95"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
numpy = ">=2.2.6"
pandas = "^2.2.2"
orjson = "^3.10.7"
uvloop = { version = "^0.20.0", markers = "platform_system != 'Windows'" }
redis = "^5.1.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.2"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.6", extras = ["standard"] }
prometheus-client = "^0.20.0"
structlog = "^24.4.0"
httpx = "^0.27.2"
tenacity = "^9.0.0"
typer = { version = "^0.12.5", extras = ["all"] }
click = "8.1.7"
rich = "^13.8.1"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"
ta = "^0.11.0"
vectorbt = "^0.26.1"
scikit-learn = "^1.5.2"
hyperopt = "^0.2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
mypy = "^1.11.2"
ruff = "^0.6.8"
bandit = "^1.7.9"
pre-commit = "^4.0.1"
types-requests = "^2.32.0.20240914"
types-PyYAML = "^6.0.12.20240917"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","PL","RUF"]
ignore = ["E501","PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
